feat: (back) box opening system
