# verseFactory_back/docs/openapi/openapi-admin-v1.yaml
@@ -150,6 +150,57 @@ paths:
           $ref: '#/components/responses/ForbiddenError'
         '404':
           $ref: '#/components/responses/NotFoundError'
+  /boxes:
+    get:
+      tags:
+        - Box
+      summary: Get all available boxes
+      operationId: getAllBoxes
+      security:
+        - OAuth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/BoxDto'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+  /boxes/{id}/open:
+    post:
+      tags:
+        - Box
+      summary: Open a box by ID and return the won pet based on drop chance
+      operationId: openBox
+      security:
+        - OAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PetDto'
+        '400':
+          $ref: '#/components/responses/BadRequestError'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
 
 components:
   securitySchemes:
@@ -210,6 +261,23 @@ components:
         petId:
           type: string
           format: uuid
+
+    BoxDto:
+      type: object
+      required:
+        - id
+        - name
+        - price
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        description:
+          type: string
+        price:
+          type: number
 
     ErrorResponse:
       type: object
